--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,10 @@ numpy>=1.24.0
 scikit-learn>=1.3.0
 matplotlib>=3.7.0
 yfinance>=0.2.0
+requests>=2.31.0
+python-dotenv>=1.0.0
 xgboost>=2.0.0
 jupyter>=1.0.0
 ipykernel>=6.25.0
+openpyxl>=3.1.0
 
