--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,10 @@
 # API Configuration
 # Copy this file to .env and fill in your API keys
 
-# API Source: 'yfinance', 'alpha_vantage', or 'polygon'
+# API Source: 'yfinance' or 'alpha_vantage'
 API_SOURCE=yfinance
 
 # API Keys (only needed if not using yfinance)
 # Get free API keys:
 # - Alpha Vantage: https://www.alphavantage.co/support/#api-key
-# - Polygon.io: https://polygon.io/
 ALPHA_VANTAGE_API_KEY=your_alpha_vantage_key_here
-POLYGON_API_KEY=your_polygon_key_here
